; ModuleID = '/home/carl/AnghaBench/mpv/misc/extr_bstr.c_bstr_splice.c'
source_filename = "/home/carl/AnghaBench/mpv/misc/extr_bstr.c_bstr_splice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bstr = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @bstr_splice(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bstr, align 4
  %5 = alloca %struct.bstr, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = bitcast %struct.bstr* %5 to i64*
  store i64 %0, i64* %8, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = getelementptr inbounds %struct.bstr, %struct.bstr* %5, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %6, align 4
  %15 = add nsw i32 %14, %13
  store i32 %15, i32* %6, align 4
  br label %16

16:                                               ; preds = %11, %3
  %17 = load i32, i32* %7, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %16
  %20 = getelementptr inbounds %struct.bstr, %struct.bstr* %5, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %7, align 4
  %23 = add nsw i32 %22, %21
  store i32 %23, i32* %7, align 4
  br label %24

24:                                               ; preds = %19, %16
  %25 = load i32, i32* %7, align 4
  %26 = getelementptr inbounds %struct.bstr, %struct.bstr* %5, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @MPMIN(i32 %25, i32 %27)
  store i32 %28, i32* %7, align 4
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @MPMAX(i32 %29, i32 0)
  store i32 %30, i32* %6, align 4
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %6, align 4
  %33 = call i32 @MPMAX(i32 %31, i32 %32)
  store i32 %33, i32* %7, align 4
  %34 = load i32, i32* %6, align 4
  %35 = getelementptr inbounds %struct.bstr, %struct.bstr* %5, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = add nsw i32 %36, %34
  store i32 %37, i32* %35, align 4
  %38 = load i32, i32* %7, align 4
  %39 = load i32, i32* %6, align 4
  %40 = sub nsw i32 %38, %39
  %41 = getelementptr inbounds %struct.bstr, %struct.bstr* %5, i32 0, i32 0
  store i32 %40, i32* %41, align 4
  %42 = bitcast %struct.bstr* %4 to i8*
  %43 = bitcast %struct.bstr* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %42, i8* align 4 %43, i64 8, i1 false)
  %44 = bitcast %struct.bstr* %4 to i64*
  %45 = load i64, i64* %44, align 4
  ret i64 %45
}

declare dso_local i32 @MPMIN(i32, i32) #1

declare dso_local i32 @MPMAX(i32, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
